crates/oxc_react_compiler/tests/snapshots/ssr__optimize-ssr.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ssr/optimize-ssr.js
---
// @outputMode:"ssr"
function Component() {
	const state = 0;
	return <input value={state} />;
}
