crates/oxc_react_compiler/tests/snapshots/ssr__ssr-infer-event-handlers-from-setState.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ssr/ssr-infer-event-handlers-from-setState.js
---
// @outputMode:"ssr"
function Component() {
	const state = 0;
	const ref = useRef(null);
	const onChange = undefined;
	return <CustomInput value={state} onChange={onChange} ref={ref} />;
}
