crates/oxc_react_compiler/tests/snapshots/ssr__ssr-infer-event-handlers-from-startTransition.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ssr/ssr-infer-event-handlers-from-startTransition.js
---
// @outputMode:"ssr"
function Component() {
	const [, startTransition] = useTransition();
	const state = 0;
	const ref = useRef(null);
	const onChange = (e) => {
		startTransition(() => {
			setState.call(null, e.target.value);
		});
	};
	return <CustomInput value={state} onChange={onChange} ref={ref} />;
}
