crates/oxc_react_compiler/tests/snapshots/ssr__ssr-use-reducer-initializer.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ssr/ssr-use-reducer-initializer.js
---
// @outputMode:"ssr"
import { useReducer } from "react";
const initializer = (x) => {
	return x;
};
function Component() {
	const state = initializer(0);
	return <input value={state} />;
}
