crates/oxc_react_compiler/tests/snapshots/ssr__ssr-use-reducer.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ssr/ssr-use-reducer.js
---
// @outputMode:"ssr"
import { useReducer } from "react";
function Component() {
	const state = 0;
	return <input value={state} />;
}
